premier test modele hierarchique

--- a/journal.org
+++ b/journal.org
@@ -5152,7 +5152,7 @@ sm = stan_model(model_code = modelString)
 
 #+begin_src R :results output :session *R* :exports both
 t_i=list()
-for(i in 1:nrow(priors)){
+for(i in 1:length(unique(tmp$cpu))){
   t_i[[i]]=sample_n(select(filter(tmp, tmp$cpu==i+1), c("mnk","duration")),500)
 }
 mnk=lapply(t_i, '[[', 1)
@@ -5162,7 +5162,7 @@ duration=lapply(t_i, '[[', 2)
 Once again we use the default values as priors.
 
 #+begin_src R :results output :session *R* :exports both
-dt = list(N=500,hosts=nrow(priors),mnk=mnk,duration=duration,it_mean=7.661272e-07,it_sd=7.661272e-08,mu_mean=6.862693e-11,mu_sd=6.862693e-12,sigma_mean=1.895320e-12,sigma_sd=1.895320e-13,n_mean=7.462142e-07,n_sd=7.462142e-08)
+dt = list(N=500,hosts=length(unique(tmp$cpu)),mnk=mnk,duration=duration,it_mean=7.661272e-07,it_sd=7.661272e-08,mu_mean=6.862693e-11,mu_sd=6.862693e-12,sigma_mean=1.895320e-12,sigma_sd=1.895320e-13,n_mean=7.462142e-07,n_sd=7.462142e-08)
 
 fit = sampling(sm,data=dt, iter=500, chains=4)
 #+end_src
@@ -5183,6 +5183,7 @@ ggplot(new_t64, aes(mnk,duration,color=origin)) + geom_point(alpha=0.6)
 
 #+RESULTS:
 [[file:./images/generated_per_host_node_64_one_prior.png]]
+
 There's not much difference (at the scale of one CPU) between a general
 prior and a more precise one.
 
@@ -5345,17 +5346,427 @@ t64$origin = 'initial'
 new_t64 = rbind(t64, t_g_64)
 #+end_src
 
-#+begin_src R :results output graphics :file (org-babel-temp-file "figure" ".png") :exports both :width 600 :height 400 :session *R* 
+#+begin_src R :results output graphics :file ./images/generated-cpu26-mh2-nh2.png :exports both :width 600 :height 400 :session *R* 
 ggplot(new_t26, aes(mnk,duration,color=origin)) + geom_point(alpha=0.6)
 #+end_src
 
 #+RESULTS:
-[[file:/tmp/babel-5316MYa/figure5316Zig.png]]
+[[file:./images/generated-cpu26-mh2-nh2.png]]
 
-#+begin_src R :results output graphics :file (org-babel-temp-file "figure" ".png") :exports both :width 600 :height 400 :session *R* 
+#+begin_src R :results output graphics :file ./images/generated-cpu64-mh2-nh2.png :exports both :width 600 :height 400 :session *R* 
 ggplot(new_t64, aes(mnk,duration,color=origin)) + geom_point(alpha=0.6)
 #+end_src
 
 #+RESULTS:
-[[file:/tmp/babel-5316MYa/figure5316msm.png]]
+[[file:./images/generated-cpu64-mh2-nh2.png]]
+
+*** 2019-06-06 thursday
+**** Tried to make a hierarchical model (from a M_H-1 N_H-2 model)
+We tried this in two steps, first fitting the regular model, and then
+trying to find the hyperparameters with a second model.
+
+#+begin_src R :results output :session *R* :exports both
+library(rstan)
+library(dplyr)
+
+data=read.csv(file="~/Documents/org/dgemm.csv", header=TRUE, sep=",")
+data=data.frame(as.numeric(data$m),as.numeric(data$n),as.numeric(data$k),data$duration,data$cpu)
+names(data)=c("m","n","k","duration","cpu")
+
+data$mnk=data$m * data$n * data$k
+tmp=select(filter(data, data$mnk < 2e10),everything())
+#+end_src
+
+#+begin_src R :results output :session *R* :exports both
+modelString = "data {
+    int<lower=0> N;
+    int hosts;
+    matrix[hosts,N] mnk;
+    matrix[hosts,N] duration;
+    real it_mean;
+    real it_sd;
+    real mu_mean;
+    real mu_sd;
+    real sigma_mean;
+    real sigma_sd;
+    real n_mean;
+    real n_sd;
+}
+parameters {
+    vector[hosts] intercept_raw;
+    vector[hosts] mu_raw;
+    vector[hosts] sigma_raw;
+    vector[hosts] noise_raw;
+}
+transformed parameters {
+    vector[hosts] intercept;
+    vector[hosts] mu;
+    vector[hosts] sigma;
+    vector[hosts] noise;
+    for(i in 1:hosts){
+      intercept[i]=it_mean + intercept_raw[i] * it_sd;
+      mu[i]=mu_mean + mu_raw[i] * mu_sd;
+      sigma[i]=sigma_mean + sigma_raw[i] * sigma_sd;
+      noise[i]= n_mean + noise_raw[i] * n_sd;
+    }
+}
+model {
+    for(i in 1:hosts){
+      intercept_raw[i] ~ normal(0,1);
+      mu_raw[i] ~ normal(0,1);
+      sigma_raw[i] ~ normal(0,1);
+      noise_raw[i] ~ normal(0,1);
+      duration[i] ~ normal(mu[i]*mnk[i]+intercept[i], sigma[i]*mnk[i]+noise[i]);
+    }
+}
+
+generated quantities {
+  vector[hosts] mnk_pos;
+  vector[hosts] y_sim;
+  for(i in 1:hosts){
+     mnk_pos[i] = mnk[i][categorical_rng(rep_vector(1,N) / N)];
+     y_sim[i] = normal_rng(mu[i]*mnk_pos[i]+intercept[i], sigma[i]*mnk_pos[i]+noise[i]);
+  }
+}
+"
+sm = stan_model(model_code = modelString)
+#+end_src
+
+#+begin_src R :results output :session *R* :exports both
+t_i=list()
+for(i in 1:length(unique(tmp$cpu))){
+  t_i[[i]]=sample_n(select(filter(tmp, tmp$cpu==i+1), c("mnk","duration")),500)
+}
+mnk=lapply(t_i, '[[', 1)
+duration=lapply(t_i, '[[', 2)
+
+dt = list(N=500,hosts=length(unique(tmp$cpu)),mnk=mnk,duration=duration,it_mean=7.661272e-07,it_sd=7.661272e-08,mu_mean=6.862693e-11,mu_sd=6.862693e-12,sigma_mean=1.895320e-12,sigma_sd=1.895320e-13,n_mean=7.462142e-07,n_sd=7.462142e-08)
+
+fit = sampling(sm,data=dt, iter=500, chains=4)
+#+end_src
+
+Now we extract the fitted values to make a new model and find the
+hyperparameters.
+
+#+begin_src R :results output :session *R* :exports both
+extracted=rstan::extract(fit)
+itm=mum=sigmam=noisem=array()
+for(i in 1:64){
+  itm[i]=mean(sample(extracted$intercept[,i],500))
+  mum[i]=mean(sample(extracted$mu[,i],500))
+  sigmam[i]=mean(sample(extracted$sigma[,i],500))
+  noisem[i]=mean(sample(extracted$noise[,i],500))
+}
+sd_intercept=abs(mean(diff(itm),na.rm = T))
+sd_mu=abs(mean(diff(mum),na.rm = T))
+sd_sigma=abs(mean(diff(sigmam),na.rm = T))
+sd_noise=abs(mean(diff(noisem),na.rm = T))
+
+dtf=data.frame(mnk=extracted$mnk_pos)
+dtf=sample_n(dtf,500)
+mnk=matrix(dtf)
+dtf=data.frame(duration=extracted$y_sim)
+dtf=sample_n(dtf,500)
+duration=matrix(dtf)
+#+end_src
+
+We determine the mean of the fitted parameters, and the sd; and then 
+we get samples of our generated data.
+
+#+begin_src R :results output :session *R* :exports both
+model2 = "data {
+    int<lower=0> N;
+    int hosts;
+    matrix[hosts,N] mnk;
+    matrix[hosts,N] duration;
+    real it_mean;
+    real it_sd;
+    real mu_mean;
+    real mu_sd;
+    real sigma_mean;
+    real sigma_sd;
+    real n_mean;
+    real n_sd;
+}
+parameters {
+    real intercept_raw;
+    real mu_raw;
+    real sigma_raw;
+    real noise_raw;
+}
+transformed parameters {
+    //hyperparameters
+
+    real hyper_intercept=it_mean + intercept_raw * it_sd;
+    real hyper_mu=mu_mean + mu_raw * mu_sd;
+    real hyper_sigma=sigma_mean + sigma_raw * sigma_sd;
+    real hyper_noise= n_mean + noise_raw * n_sd;
+}
+model {
+    intercept_raw ~ normal(0,1);
+    mu_raw ~ normal(0,1);
+    sigma_raw ~ normal(0,1);
+    noise_raw ~ normal(0,1);
+
+    for(i in 1:hosts){
+      duration[i] ~ normal(hyper_mu*mnk[i]+hyper_intercept, hyper_sigma*mnk[i]+hyper_noise);
+    }
+}
+"
+sm = stan_model(model_code = model2)
+#+end_src
+
+#+begin_src R :results output :session *R* :exports both
+dt2 = list(N=500,hosts=length(unique(tmp$cpu)),mnk=mnk,duration=duration,it_mean=mean(itm),it_sd=sd_intercept,mu_mean=mean(mum),mu_sd=sd_mu,sigma_mean=mean(sigmam),sigma_sd=sd_sigma,n_mean=mean(noisem),n_sd=sd_noise)
+
+fit2 = sampling(sm,data=dt, iter=500, chains=4)
+#+end_src
+
+#+begin_src R :results output :session *R* :exports both
+print(fit2,digits=15,pars=c("hyper_intercept","hyper_mu","hyper_sigma","hyper_noise"))
+#+end_src
+
+#+RESULTS:
+#+begin_example
+Inference for Stan model: 931849367e3716d40cfdca451d826b72.
+4 chains, each with iter=500; warmup=250; thin=1; 
+post-warmup draws per chain=250, total post-warmup draws=1000.
+
+                        mean      se_mean           sd         2.5%
+hyper_intercept 8.104216e-07 2.140611e-09 5.171246e-08 7.136257e-07
+hyper_mu        6.991700e-11 2.000000e-15 4.700000e-14 6.982700e-11
+hyper_sigma     8.347000e-12 1.000000e-15 3.000000e-14 8.291000e-12
+hyper_noise     7.963650e-07 1.451748e-09 4.080479e-08 7.258857e-07
+                         25%          50%          75%        97.5% n_eff
+hyper_intercept 7.716212e-07 8.094532e-07 8.487668e-07 9.130694e-07   584
+hyper_mu        6.988600e-11 6.991600e-11 6.994600e-11 7.000700e-11   881
+hyper_sigma     8.327000e-12 8.345000e-12 8.367000e-12 8.406000e-12   870
+hyper_noise     7.685932e-07 7.944681e-07 8.242874e-07 8.771479e-07   790
+                     Rhat
+hyper_intercept 1.0031561
+hyper_mu        1.0005676
+hyper_sigma     0.9991422
+hyper_noise     0.9998122
+
+Samples were drawn using NUTS(diag_e) at Thu Jun  6 13:11:38 2019.
+For each parameter, n_eff is a crude measure of effective sample size,
+and Rhat is the potential scale reduction factor on split chains (at 
+convergence, Rhat=1).
+#+end_example
+
+So now we have the values of our hyperparameters.
+
+#+begin_src R :results output :session *R* :exports both
+extracted=rstan::extract(fit2)
+extracted$hyper_intercept
+#+end_src
+
+#+RESULTS:
+#+begin_example
+
+   [1] 8.402127e-07 7.814403e-07 7.631864e-07 8.619633e-07 8.279334e-07
+   [6] 8.557227e-07 8.201473e-07 8.378625e-07 9.336760e-07 8.492689e-07
+  [11] 7.323584e-07 7.856857e-07 7.882816e-07 8.342548e-07 8.030946e-07
+  [16] 8.247482e-07 8.052007e-07 7.987198e-07 8.585428e-07 7.897941e-07
+  [21] 9.073715e-07 8.667896e-07 7.802938e-07 7.619628e-07 7.630271e-07
+  [26] 7.422751e-07 8.505939e-07 6.743949e-07 8.075521e-07 7.921153e-07
+  [31] 8.766237e-07 7.830908e-07 7.259283e-07 7.984879e-07 8.624085e-07
+  [36] 7.494956e-07 8.583518e-07 7.423703e-07 8.322159e-07 8.658805e-07
+  [41] 7.061285e-07 8.111938e-07 8.421451e-07 7.945077e-07 8.310452e-07
+  [46] 8.487107e-07 8.583777e-07 8.545419e-07 7.997761e-07 8.435103e-07
+  [51] 7.654518e-07 7.930138e-07 8.969250e-07 8.208776e-07 7.931523e-07
+  [56] 8.463928e-07 7.545953e-07 6.841822e-07 8.266057e-07 7.600562e-07
+  [61] 8.076350e-07 7.580950e-07 7.876414e-07 8.015042e-07 7.720738e-07
+  [66] 8.513948e-07 8.798663e-07 7.447716e-07 8.343894e-07 8.807825e-07
+  [71] 8.510461e-07 8.068256e-07 8.847498e-07 7.412155e-07 8.393860e-07
+  [76] 7.965753e-07 7.460073e-07 8.058704e-07 7.646315e-07 8.037607e-07
+  [81] 7.334751e-07 7.788136e-07 7.724725e-07 7.940145e-07 7.946952e-07
+  [86] 8.141830e-07 8.047829e-07 7.872724e-07 8.727474e-07 7.059307e-07
+  [91] 7.652872e-07 7.522633e-07 8.791632e-07 8.334644e-07 7.691067e-07
+  [96] 7.638338e-07 8.383462e-07 8.409228e-07 7.914053e-07 8.545419e-07
+ [101] 7.308022e-07 8.803337e-07 8.771188e-07 7.624561e-07 8.391428e-07
+ [106] 8.538295e-07 7.134525e-07 8.720012e-07 8.618940e-07 9.077406e-07
+ [111] 7.850641e-07 7.740999e-07 7.454231e-07 8.573421e-07 7.958147e-07
+ [116] 7.859881e-07 7.783310e-07 8.238186e-07 7.701169e-07 7.455924e-07
+ [121] 8.013226e-07 7.333468e-07 7.505229e-07 8.060172e-07 7.451729e-07
+ [126] 8.095451e-07 8.066296e-07 8.637943e-07 9.273141e-07 7.416664e-07
+ [131] 8.334050e-07 7.817516e-07 7.796903e-07 6.916830e-07 8.393321e-07
+ [136] 8.561199e-07 7.567907e-07 7.762744e-07 7.997791e-07 7.856812e-07
+ [141] 7.673514e-07 8.534875e-07 8.193076e-07 8.575475e-07 7.927569e-07
+ [146] 8.604431e-07 8.283349e-07 8.062917e-07 8.379328e-07 7.758300e-07
+ [151] 8.371383e-07 7.465534e-07 9.088362e-07 8.567715e-07 7.891137e-07
+ [156] 7.860140e-07 7.613452e-07 7.721391e-07 7.963747e-07 7.769979e-07
+ [161] 8.496390e-07 7.611529e-07 7.780995e-07 8.206634e-07 8.157108e-07
+ [166] 9.341448e-07 7.631736e-07 7.547044e-07 7.621765e-07 8.389995e-07
+ [171] 8.027318e-07 8.754801e-07 8.249214e-07 8.501693e-07 7.705082e-07
+ [176] 8.368199e-07 8.243594e-07 7.526178e-07 8.035294e-07 7.866123e-07
+ [181] 8.010409e-07 8.022022e-07 7.965301e-07 9.132764e-07 8.647586e-07
+ [186] 7.698674e-07 8.589419e-07 8.374539e-07 9.418844e-07 7.882495e-07
+ [191] 7.996840e-07 8.647968e-07 8.313193e-07 8.554718e-07 7.648997e-07
+ [196] 8.695087e-07 7.940367e-07 7.938910e-07 7.941160e-07 7.654139e-07
+ [201] 7.792679e-07 7.767812e-07 7.985565e-07 7.648018e-07 8.381251e-07
+ [206] 8.016763e-07 7.503923e-07 8.618563e-07 8.460055e-07 8.160067e-07
+ [211] 8.277805e-07 8.412970e-07 8.548891e-07 8.815341e-07 7.791579e-07
+ [216] 9.623881e-07 8.488711e-07 7.414814e-07 8.332754e-07 7.707342e-07
+ [221] 7.819458e-07 8.814988e-07 7.593835e-07 8.026071e-07 7.880851e-07
+ [226] 7.948501e-07 8.535345e-07 8.217313e-07 7.666262e-07 7.383143e-07
+ [231] 8.374160e-07 7.978421e-07 8.334725e-07 7.936865e-07 8.255004e-07
+ [236] 8.367806e-07 7.965807e-07 7.613265e-07 8.885834e-07 8.214351e-07
+ [241] 8.601483e-07 8.074841e-07 8.629702e-07 7.572189e-07 8.621377e-07
+ [246] 7.798132e-07 7.815274e-07 8.053503e-07 7.895893e-07 7.899483e-07
+ [251] 7.479403e-07 8.101841e-07 8.525544e-07 8.194440e-07 8.496446e-07
+ [256] 8.820032e-07 9.006008e-07 8.232600e-07 7.974624e-07 7.726802e-07
+ [261] 7.975862e-07 8.408671e-07 7.490304e-07 8.105847e-07 7.439068e-07
+ [266] 8.157245e-07 8.715746e-07 8.358543e-07 8.417545e-07 8.796145e-07
+ [271] 7.681335e-07 8.062021e-07 8.327835e-07 8.182526e-07 8.599590e-07
+ [276] 8.451488e-07 8.283822e-07 8.159369e-07 7.646281e-07 7.995602e-07
+ [281] 8.345148e-07 8.908537e-07 7.305911e-07 8.836344e-07 8.617668e-07
+ [286] 7.479223e-07 7.633449e-07 9.038376e-07 8.157772e-07 7.850893e-07
+ [291] 7.490333e-07 8.205300e-07 7.811443e-07 7.787953e-07 8.589675e-07
+ [296] 7.887746e-07 7.436444e-07 8.511363e-07 7.509661e-07 7.359501e-07
+ [301] 8.305113e-07 8.518856e-07 8.291373e-07 7.710818e-07 8.846435e-07
+ [306] 8.990606e-07 7.349447e-07 8.908919e-07 7.790557e-07 8.949537e-07
+ [311] 8.531095e-07 8.566822e-07 8.598489e-07 8.015297e-07 8.484284e-07
+ [316] 7.865579e-07 8.083142e-07 8.599692e-07 7.693602e-07 7.747976e-07
+ [321] 8.427443e-07 8.383613e-07 8.463660e-07 7.695962e-07 8.108298e-07
+ [326] 7.564804e-07 8.498797e-07 8.412582e-07 8.549335e-07 7.976857e-07
+ [331] 7.801670e-07 8.041749e-07 8.185821e-07 8.357192e-07 8.213101e-07
+ [336] 8.559199e-07 7.808689e-07 8.689182e-07 8.019220e-07 7.855050e-07
+ [341] 7.337656e-07 7.497141e-07 8.421467e-07 8.168704e-07 8.216826e-07
+ [346] 8.193552e-07 7.377718e-07 7.531990e-07 8.412864e-07 7.769199e-07
+ [351] 8.385550e-07 8.015644e-07 8.743251e-07 7.702462e-07 8.324158e-07
+ [356] 8.522297e-07 7.378066e-07 8.139567e-07 7.924789e-07 8.155799e-07
+ [361] 8.605895e-07 8.327816e-07 8.567680e-07 7.739562e-07 8.071405e-07
+ [366] 8.989385e-07 8.592610e-07 8.159875e-07 7.346945e-07 7.758709e-07
+ [371] 9.790809e-07 7.076529e-07 8.268703e-07 8.263146e-07 8.124870e-07
+ [376] 7.982688e-07 8.507188e-07 8.211644e-07 8.005620e-07 7.605200e-07
+ [381] 8.095218e-07 8.811681e-07 8.419319e-07 8.446066e-07 7.501534e-07
+ [386] 7.585948e-07 7.933634e-07 9.391238e-07 8.001583e-07 7.271627e-07
+ [391] 7.108057e-07 8.576019e-07 8.286113e-07 8.414678e-07 9.064805e-07
+ [396] 8.501496e-07 7.724818e-07 8.259909e-07 8.271808e-07 8.221745e-07
+ [401] 8.128250e-07 7.658897e-07 7.845663e-07 7.226732e-07 8.807600e-07
+ [406] 7.815213e-07 8.408681e-07 9.542817e-07 8.511123e-07 8.677263e-07
+ [411] 8.151525e-07 7.821674e-07 7.902587e-07 7.915802e-07 8.980851e-07
+ [416] 8.960472e-07 8.062061e-07 8.229191e-07 7.782700e-07 7.690398e-07
+ [421] 8.474629e-07 7.433691e-07 7.813713e-07 8.469624e-07 8.290084e-07
+ [426] 7.550774e-07 8.318234e-07 8.756384e-07 7.475913e-07 8.814474e-07
+ [431] 8.160510e-07 8.883255e-07 8.019718e-07 8.107007e-07 7.807240e-07
+ [436] 8.255548e-07 7.791040e-07 7.325652e-07 7.869811e-07 7.921010e-07
+ [441] 7.716201e-07 7.485753e-07 8.828512e-07 8.513277e-07 8.253074e-07
+ [446] 7.979340e-07 7.957084e-07 7.908779e-07 7.512937e-07 8.826487e-07
+ [451] 7.552667e-07 8.082909e-07 7.590613e-07 7.590221e-07 7.296734e-07
+ [456] 8.192212e-07 8.163969e-07 7.590694e-07 8.579070e-07 8.477576e-07
+ [461] 8.423806e-07 8.670867e-07 8.150914e-07 7.886395e-07 7.973267e-07
+ [466] 7.811425e-07 7.882924e-07 7.393279e-07 7.654960e-07 7.808555e-07
+ [471] 8.672523e-07 8.474648e-07 7.133180e-07 7.271627e-07 8.140374e-07
+ [476] 8.275412e-07 8.551912e-07 8.285782e-07 8.427290e-07 9.001087e-07
+ [481] 8.612099e-07 8.292712e-07 8.000863e-07 7.956979e-07 8.322044e-07
+ [486] 8.233955e-07 8.393572e-07 8.670364e-07 7.933699e-07 7.699772e-07
+ [491] 7.965576e-07 7.887746e-07 7.811757e-07 7.943772e-07 8.403312e-07
+ [496] 8.694295e-07 8.080387e-07 7.639561e-07 1.001140e-06 7.803897e-07
+ [501] 7.132345e-07 8.077244e-07 8.119515e-07 7.693263e-07 8.746038e-07
+ [506] 7.073265e-07 7.939491e-07 7.474204e-07 7.834486e-07 8.249215e-07
+ [511] 7.730026e-07 7.750421e-07 8.394354e-07 8.323328e-07 8.265418e-07
+ [516] 7.578578e-07 8.202799e-07 8.327223e-07 8.120594e-07 7.920460e-07
+ [521] 7.666961e-07 7.458599e-07 8.556995e-07 7.438245e-07 8.023267e-07
+ [526] 8.095752e-07 8.023680e-07 8.298339e-07 7.366879e-07 7.574751e-07
+ [531] 7.577899e-07 8.138005e-07 8.606245e-07 8.565722e-07 7.254187e-07
+ [536] 7.386865e-07 8.335374e-07 7.399926e-07 8.497276e-07 8.369296e-07
+ [541] 8.104523e-07 8.119983e-07 7.600389e-07 7.547770e-07 8.587410e-07
+ [546] 8.154326e-07 8.154655e-07 8.476947e-07 7.784800e-07 7.620916e-07
+ [551] 8.556775e-07 7.921151e-07 7.648003e-07 7.543148e-07 8.592545e-07
+ [556] 7.605459e-07 8.027269e-07 8.182917e-07 7.424145e-07 8.255011e-07
+ [561] 7.648595e-07 7.991639e-07 8.286774e-07 8.489509e-07 7.728810e-07
+ [566] 7.589442e-07 9.532265e-07 7.982795e-07 8.449714e-07 8.164629e-07
+ [571] 7.273291e-07 7.335898e-07 8.619985e-07 8.375251e-07 7.270048e-07
+ [576] 8.178744e-07 8.454757e-07 8.262931e-07 8.527916e-07 8.531998e-07
+ [581] 7.411047e-07 8.489509e-07 8.870616e-07 8.153939e-07 8.209718e-07
+ [586] 7.973964e-07 8.121014e-07 7.961135e-07 7.977050e-07 7.067785e-07
+ [591] 8.224369e-07 9.130641e-07 8.108636e-07 8.298008e-07 8.269383e-07
+ [596] 9.098066e-07 7.645034e-07 7.727412e-07 8.203879e-07 8.900389e-07
+ [601] 7.269827e-07 7.686833e-07 7.954162e-07 7.845543e-07 8.534724e-07
+ [606] 7.322020e-07 8.503587e-07 8.226764e-07 8.212685e-07 7.457376e-07
+ [611] 8.953438e-07 7.881566e-07 8.361383e-07 8.031859e-07 7.995057e-07
+ [616] 7.806952e-07 7.628714e-07 7.940737e-07 8.882034e-07 7.874217e-07
+ [621] 8.074357e-07 8.046041e-07 7.141961e-07 8.209718e-07 7.851974e-07
+ [626] 7.703828e-07 8.340239e-07 7.449134e-07 8.294079e-07 7.837016e-07
+ [631] 7.351508e-07 7.025956e-07 7.399828e-07 8.075764e-07 7.884048e-07
+ [636] 8.796976e-07 8.802440e-07 7.734473e-07 7.651869e-07 7.971181e-07
+ [641] 8.051834e-07 7.850856e-07 7.526038e-07 8.862555e-07 8.283564e-07
+ [646] 6.588900e-07 7.419093e-07 7.499565e-07 7.631496e-07 7.728029e-07
+ [651] 8.386044e-07 7.933225e-07 7.768689e-07 7.463943e-07 8.725481e-07
+ [656] 7.845716e-07 7.972589e-07 8.603695e-07 7.638608e-07 8.261929e-07
+ [661] 7.689465e-07 8.733448e-07 8.717463e-07 7.656024e-07 8.263958e-07
+ [666] 8.322462e-07 8.558587e-07 8.093845e-07 8.424987e-07 7.898844e-07
+ [671] 8.759574e-07 7.861722e-07 8.400077e-07 7.810365e-07 8.155262e-07
+ [676] 9.255514e-07 8.368200e-07 7.377345e-07 8.566747e-07 7.080100e-07
+ [681] 7.568554e-07 7.441479e-07 8.442492e-07 8.028894e-07 8.080188e-07
+ [686] 8.446932e-07 7.975201e-07 8.721442e-07 9.206697e-07 8.030653e-07
+ [691] 7.612914e-07 7.656922e-07 7.398853e-07 7.947679e-07 7.026882e-07
+ [696] 7.190853e-07 8.288673e-07 8.703726e-07 7.572234e-07 8.548770e-07
+ [701] 7.717363e-07 7.852602e-07 7.629425e-07 8.738503e-07 7.470064e-07
+ [706] 7.581859e-07 8.067928e-07 8.488096e-07 8.193373e-07 8.476758e-07
+ [711] 8.253971e-07 7.345229e-07 7.823922e-07 8.130807e-07 8.277745e-07
+ [716] 8.072926e-07 7.885377e-07 8.926055e-07 7.758989e-07 8.437858e-07
+ [721] 7.914228e-07 7.943218e-07 8.066777e-07 8.467181e-07 8.937441e-07
+ [726] 7.827492e-07 7.659212e-07 8.750591e-07 7.600226e-07 7.725874e-07
+ [731] 8.082016e-07 8.477379e-07 8.385850e-07 8.697243e-07 6.901400e-07
+ [736] 8.088150e-07 8.568007e-07 9.141731e-07 7.934500e-07 7.803973e-07
+ [741] 7.039496e-07 7.728108e-07 7.559937e-07 7.816909e-07 8.036476e-07
+ [746] 7.696704e-07 7.945219e-07 8.153366e-07 8.537829e-07 9.155959e-07
+ [751] 7.678717e-07 7.412358e-07 7.864790e-07 8.633204e-07 6.984825e-07
+ [756] 7.198557e-07 8.752032e-07 8.715283e-07 8.370117e-07 7.714682e-07
+ [761] 8.309664e-07 8.847532e-07 8.712571e-07 7.889512e-07 8.104935e-07
+ [766] 8.136463e-07 7.606748e-07 7.581081e-07 7.901710e-07 7.497370e-07
+ [771] 8.400807e-07 8.789215e-07 7.588179e-07 8.167470e-07 8.371550e-07
+ [776] 7.699895e-07 7.434442e-07 8.460706e-07 9.089565e-07 7.734459e-07
+ [781] 8.605760e-07 8.608744e-07 8.159822e-07 7.820774e-07 7.201045e-07
+ [786] 8.595154e-07 8.077474e-07 7.078327e-07 8.097585e-07 8.443097e-07
+ [791] 8.631610e-07 7.655204e-07 9.002616e-07 8.255728e-07 8.911935e-07
+ [796] 8.239171e-07 8.158254e-07 7.842998e-07 8.921774e-07 7.531101e-07
+ [801] 7.339511e-07 7.500975e-07 8.325094e-07 8.267349e-07 8.802250e-07
+ [806] 7.716216e-07 8.495084e-07 8.872341e-07 8.557048e-07 9.386206e-07
+ [811] 8.790814e-07 7.929920e-07 8.306345e-07 8.198273e-07 7.544795e-07
+ [816] 7.653829e-07 7.503209e-07 8.508460e-07 8.575833e-07 9.046061e-07
+ [821] 7.597858e-07 8.987739e-07 8.446974e-07 8.815626e-07 8.643534e-07
+ [826] 8.739671e-07 8.369211e-07 8.128749e-07 8.727897e-07 7.599209e-07
+ [831] 7.662644e-07 8.471760e-07 8.039000e-07 8.815626e-07 8.486411e-07
+ [836] 8.503085e-07 7.065958e-07 8.490508e-07 9.170010e-07 9.091636e-07
+ [841] 8.667838e-07 8.705687e-07 7.600810e-07 8.830005e-07 9.211823e-07
+ [846] 7.585385e-07 8.102441e-07 6.837009e-07 7.456874e-07 8.715606e-07
+ [851] 7.693617e-07 9.392426e-07 8.375738e-07 7.458660e-07 8.785532e-07
+ [856] 8.179335e-07 8.520129e-07 8.284507e-07 8.685551e-07 8.056182e-07
+ [861] 8.648513e-07 9.359476e-07 7.235252e-07 9.143674e-07 7.318203e-07
+ [866] 8.700158e-07 7.482672e-07 8.654210e-07 8.104426e-07 9.052116e-07
+ [871] 8.245019e-07 7.682270e-07 6.795570e-07 7.584055e-07 7.391500e-07
+ [876] 7.642827e-07 8.473480e-07 9.312005e-07 8.361353e-07 7.255055e-07
+ [881] 8.784272e-07 7.546406e-07 7.157308e-07 8.735130e-07 8.526947e-07
+ [886] 7.443032e-07 7.070338e-07 8.220639e-07 7.392202e-07 8.226313e-07
+ [891] 7.204154e-07 7.716637e-07 8.737538e-07 8.203123e-07 8.780033e-07
+ [896] 7.933167e-07 8.493046e-07 7.902626e-07 7.401456e-07 9.328432e-07
+ [901] 8.534153e-07 8.562217e-07 8.015308e-07 8.699907e-07 7.088893e-07
+ [906] 8.467385e-07 8.137605e-07 8.257237e-07 8.174896e-07 8.200369e-07
+ [911] 8.288465e-07 8.578094e-07 7.136301e-07 8.551767e-07 8.570690e-07
+ [916] 7.493376e-07 8.448763e-07 7.403392e-07 8.695955e-07 8.478515e-07
+ [921] 7.765250e-07 8.689454e-07 7.986976e-07 8.143581e-07 8.185157e-07
+ [926] 7.965241e-07 8.751010e-07 8.028347e-07 9.264707e-07 7.581804e-07
+ [931] 8.589489e-07 8.960811e-07 8.505847e-07 7.679978e-07 8.671617e-07
+ [936] 7.222725e-07 8.878068e-07 8.759999e-07 8.437535e-07 8.313901e-07
+ [941] 8.083702e-07 8.029354e-07 7.820703e-07 8.932638e-07 7.824151e-07
+ [946] 8.267126e-07 7.737899e-07 8.304512e-07 7.742488e-07 7.921120e-07
+ [951] 7.482283e-07 7.297810e-07 8.344240e-07 8.630938e-07 7.666486e-07
+ [956] 7.401025e-07 7.859592e-07 8.988881e-07 7.720419e-07 7.404667e-07
+ [961] 8.474061e-07 7.872871e-07 7.183104e-07 8.124031e-07 7.639904e-07
+ [966] 8.750850e-07 7.779930e-07 8.585767e-07 9.037145e-07 7.604505e-07
+ [971] 7.808530e-07 8.279638e-07 7.347730e-07 8.339096e-07 7.727553e-07
+ [976] 7.235974e-07 8.487525e-07 8.155775e-07 8.508072e-07 9.187432e-07
+ [981] 8.787984e-07 7.238498e-07 7.585700e-07 7.470539e-07 8.173873e-07
+ [986] 8.255712e-07 7.745518e-07 7.554019e-07 8.188820e-07 7.739783e-07
+ [991] 7.270517e-07 8.337999e-07 7.563863e-07 7.792299e-07 7.967257e-07
+ [996] 7.351680e-07 7.407480e-07 8.719468e-07 8.455731e-07 8.803693e-07
+#+end_example
+
+This is an example of the possible values of an intercept for a node,
+knowing the mean value of the hyper intercept and its sd. We could now
+imagine generating new parameters for new CPUs.
 
