--- a/journal.org
+++ b/journal.org
@@ -6226,62 +6226,84 @@ Unsurprisingly, the results are a bit off and the trace don't
 converge. We try to indicate the init values to see if it would help.
 
 #+begin_src R :results output :session *R* :exports both
-dt = list(N=500,hosts=length(unique(tmp$cpu)),mnk=mnk,duration=duration)
+t_i=list()
+
+t_i[[1]]=sample_n(select(filter(tmp, tmp$cpu==2), c("mnk","duration")),500)
+
+mnk=lapply(t_i, '[[', 1)
+duration=lapply(t_i, '[[', 2)
+#+end_src
+
+#+begin_src R :results output :session *R* :exports both
+dt = list(N=500,hosts=1,mnk=mnk,duration=duration)
 
 initfunction=function(){
-  list(intercept=array(rep(1e-07,64)),mu=array(rep(1e-07,64)),sigma=array(rep(1e-07,64)),noise=array(rep(1e-07,64)))
+  list(intercept=array(1e-07),mu=array(1e-07),sigma=array(1e-07),noise=array(1e-07))
 }
-fit = sampling(sm,data=dt, iter=400, chains=3,init=initfunction, control=list(adapt_delta=0.9,max_treedepth=15))
+fit = sampling(sm,data=dt, iter=500, chains=4,init=initfunction, control=list(adapt_delta=0.9,max_treedepth=15))
 #+end_src
 
 #+RESULTS:
 #+begin_example
 Warning messages:
-1: There were 285 divergent transitions after warmup. Increasing adapt_delta above 0.8 may help. See
-http://mc-stan.org/misc/warnings.html#divergent-transitions-after-warmup 
-2: There were 311 transitions after warmup that exceeded the maximum treedepth. Increase max_treedepth above 10. See
+1: There were 726 transitions after warmup that exceeded the maximum treedepth. Increase max_treedepth above 10. See
 http://mc-stan.org/misc/warnings.html#maximum-treedepth-exceeded 
-3: Examine the pairs() plot to diagnose sampling problems
+2: Examine the pairs() plot to diagnose sampling problems
 #+end_example
 
-We had to reduce the number of chains and iterations because of the
-time needed to make the fit.
-
 #+begin_src R :results output :session *R* :exports both
-extracted=rstan::extract(fit)
-print(mean(extracted$intercept))
-print(mean(extracted$mu))
-print(mean(extracted$sigma))
-print(mean(extracted$noise))
+print(fit,digits=15)
 #+end_src
 
 #+RESULTS:
-: 
-: [1] 6.504833e-07
-: 
-: [1] 7.259544e-11
-: 
-: [1] 1e-07
-: 
-: [1] 1.076834e-06
+#+begin_example
+Inference for Stan model: 91ff40f823f9b254cea5940bf2f5c054.
+4 chains, each with iter=500; warmup=250; thin=1; 
+post-warmup draws per chain=250, total post-warmup draws=1000.
+
+                      mean      se_mean           sd          2.5%
+intercept[1]  2.331079e-06 7.724475e-09 2.035879e-07  1.953770e-06
+mu[1]         1.885270e-10 1.526820e-10 4.646920e-09 -8.294620e-09
+sigma[1]      9.999552e-08 2.066000e-12 3.058000e-12  9.999046e-08
+noise[1]      9.999926e-08 4.325000e-12 6.332000e-12  9.998838e-08
+lp__         -2.996861e+03 5.268269e-02 1.020871e+00 -2.999819e+03
+                       25%           50%           75%         97.5% n_eff
+intercept[1]  2.191990e-06  2.325889e-06  2.473156e-06  2.724970e-06   695
+mu[1]        -3.011614e-09  1.101550e-10  3.222656e-09  9.407412e-09   926
+sigma[1]      9.999246e-08  9.999665e-08  9.999813e-08  1.000000e-07     2
+noise[1]      9.999464e-08  1.000004e-07  1.000043e-07  1.000090e-07     2
+lp__         -2.997269e+03 -2.996563e+03 -2.996128e+03 -2.995832e+03   375
+                  Rhat
+intercept[1] 0.9993314
+mu[1]        1.0038432
+sigma[1]     3.8753281
+noise[1]     6.9209276
+lp__         1.0128096
+
+Samples were drawn using NUTS(diag_e) at Wed Jun 19 10:48:09 2019.
+For each parameter, n_eff is a crude measure of effective sample size,
+and Rhat is the potential scale reduction factor on split chains (at 
+convergence, Rhat=1).
+#+end_example
 
 So without priors but with the init values, the results found are
 pretty accurate.
 
 #+begin_src R :results output graphics :file ./images/trace_mh1_nh2_no_prior.png :exports both :width 600 :height 400 :session *R* 
-stan_trace(fit,pars=c("intercept[1]","mu[1]","sigma[1]","noise[1]"))
+stan_trace(fit)
 #+end_src
 
 #+RESULTS:
 [[file:./images/trace_mh1_nh2_no_prior.png]]
 
-However the chains don't converge in the trace except for mu. It isn't
-so surprising considering giving a prior is considered one of the good
-practices in stan, and the more accurate the prior, the more accurate
-the results (without a big amount of data). As a fact, it is
-surprising that the results could get so "close" to the
-usual ones, and that's due to the init values given, that
-guide stan in the right direction to start the fit.
+However the chains don't converge in the trace except for mu and
+intercept. It isn't so surprising the chains would have trouble
+converging without a prior, considering giving a prior is considered
+one of the good practices in stan, with the more accurate the prior,
+the more accurate the results (without a big amount of data). As a
+fact, it is surprising that the results could get so "close" to the
+usual ones, and that's due to the init values given, that guide stan
+in the right direction to start the fit.
 
 ****** With a less informative prior
 
@@ -6798,11 +6820,10 @@ good fit.
 - State "DONE"       from "STARTED" [2019-06-17 lun. 16:08]
 - State "STARTED"    from "TODO"       [2019-06-17 lun. 14:46]
 :END:      
-****** With a precise prior
-We won't try again with falsely informative priors as we've seen the
-result: it's extremely unlikely to work; instead we'll test with
-a rather precise prior.
-
+****** STARTED Without prior
+:LOGBOOK:  
+- State "STARTED"    from "TODO"       [2019-06-18 mar. 21:25]
+:END:      
 #+begin_src R :results output :session *R* :exports both
 library(rstan)
 library(dplyr)
@@ -6825,13 +6846,6 @@ modelString = "data {
     matrix[hosts,N] n;
     matrix[hosts,N] k;   
     matrix[hosts,N] duration; //N*hosts observations of the duration of dgemm
-
-    //The priors
-    
-    vector[5] mu_mean; //mu[1]=mnk, mu[2]=mn, mu[3]=mk, mu[4]=nk, mu[5]=intercept
-    vector[5] mu_sd;
-    vector[5] sigma_mean;
-    vector[5] sigma_sd;
 }
 transformed data {
     //The calculated data
@@ -6842,55 +6856,17 @@ transformed data {
     matrix[hosts,N] nk=n .* k;
 }
 parameters {
-    //The raw parameters
-
-    matrix[hosts,5] mu_raw;
-    matrix[hosts,5] sigma_raw;
-}
-transformed parameters {
     //The real parameters
 
     matrix[hosts,5] mu;
-    matrix[hosts,5] sigma;
-
-    //The priors for the real parameters
-
-    for(j in 1:5){
-      mu[,j] = mu_mean[j] + mu_raw[,j] * mu_sd[j];
-      sigma[,j] = sigma_mean[j] + sigma_raw[,j] * sigma_sd[j];
-    }
-    
+    matrix<lower=0>[hosts,5] sigma;
 }
 model {
-    //The priors for the raw parameters
-
-    for(i in 1:hosts){
-      mu_raw[i] ~ normal(0,1);
-      sigma_raw[i] ~ normal(0,1);
-    }
-
     //The likelihood
 
     for(i in 1:hosts){
       duration[i] ~ normal(mu[i,1]*mnk[i]+mu[i,2]*mn[i]+mu[i,3]*mk[i]+mu[i,4]*nk[i]+mu[i,5], sigma[i,1]*mnk[i]+sigma[i,2]*mn[i]+sigma[i,3]*mk[i]+sigma[i,4]*nk[i]+sigma[i,5]);
     }
-}
-
-generated quantities {
-  //The generated data
-
-  vector[hosts] mnk_pos;
-  vector[hosts] mn_pos;
-  vector[hosts] mk_pos;
-  vector[hosts] nk_pos;
-  vector[hosts] y_sim;
-  for(i in 1:hosts){
-     mnk_pos[i] = mnk[i][categorical_rng(rep_vector(1,N) / N)];
-     mn_pos[i] = mn[i][categorical_rng(rep_vector(1,N) / N)];
-     mk_pos[i] = mk[i][categorical_rng(rep_vector(1,N) / N)];
-     nk_pos[i] = nk[i][categorical_rng(rep_vector(1,N) / N)];
-     y_sim[i] = normal_rng(mu[i,1]*mnk_pos[i]+mu[i,2]*mn_pos[i]+mu[i,3]*mk_pos[i]+mu[i,4]*nk_pos[i]+mu[i,5], sigma[i,1]*mnk_pos[i]+sigma[i,2]*mn_pos[i]+sigma[i,3]*mk_pos[i]+sigma[i,4]*nk_pos[i]+sigma[i,5]);
-  }
 }
 "
 sm = stan_model(model_code = modelString)
@@ -6908,6 +6884,173 @@ duration=lapply(t_i, '[[', 5)
 
 We only make the fit for one host because we don't need all of them,
 we just need to see if the priors are enough to make an accurate fit.
+
+#+begin_src R :results output :session *R* :exports both
+dt = list(N=500,hosts=1,m=m,n=n,k=k,duration=duration)
+
+fit = sampling(sm,data=dt, iter=500, chains=4,control=list(adapt_delta=0.9))
+#+end_src
+
+#+RESULTS:
+#+begin_example 
+Warning messages:
+1: There were 848 divergent transitions after warmup. Increasing adapt_delta above 0.9 may help. See
+http://mc-stan.org/misc/warnings.html#divergent-transitions-after-warmup 
+2: There were 152 transitions after warmup that exceeded the maximum treedepth. Increase max_treedepth above 10. See
+http://mc-stan.org/misc/warnings.html#maximum-treedepth-exceeded 
+3: There were 4 chains where the estimated Bayesian Fraction of Missing Information was low. See
+http://mc-stan.org/misc/warnings.html#bfmi-low 
+4: Examine the pairs() plot to diagnose sampling problems
+#+end_example
+
+#+begin_src R :results output :session *R* :exports both
+print(fit, digits=15, pars=c("mu","sigma"))
+#+end_src
+
+#+RESULTS:
+#+begin_example
+Inference for Stan model: 433f95818533823f5cce00385630df99.
+4 chains, each with iter=500; warmup=250; thin=1; 
+post-warmup draws per chain=250, total post-warmup draws=1000.
+
+                    mean      se_mean           sd          2.5%           25%
+mu[1,1]     2.138332e-07 1.521025e-07 5.875230e-07 -8.853643e-07 -1.959397e-07
+mu[1,2]    -1.113952e-04 5.734377e-05 2.611650e-04 -4.916292e-04 -3.205088e-04
+mu[1,3]    -8.970567e-05 1.151089e-04 3.061132e-04 -5.886140e-04 -4.128870e-04
+mu[1,4]    -5.817123e-05 4.200450e-05 4.286302e-04 -1.255857e-03 -2.592629e-04
+mu[1,5]     9.358376e-01 2.335567e-01 3.306381e-01  4.799557e-01  7.639884e-01
+sigma[1,1]  8.520105e-07 1.477220e-07 2.358574e-07  5.927883e-07  6.524232e-07
+sigma[1,2]  1.220399e-03 5.518270e-04 7.910209e-04  4.779758e-04  6.307535e-04
+sigma[1,3]  1.796206e-03 7.993203e-04 1.144438e-03  6.496357e-04  1.157591e-03
+sigma[1,4]  2.509362e-03 2.059545e-03 3.029036e-03  6.745833e-04  7.350682e-04
+sigma[1,5]  3.436304e-01 1.680635e-01 2.379160e-01  1.505828e-01  1.868027e-01
+                     50%          75%        97.5% n_eff       Rhat
+mu[1,1]     2.115594e-07 5.986952e-07 1.292286e-06    15   1.238766
+mu[1,2]    -1.304720e-04 4.719256e-05 3.857456e-04    21   1.268252
+mu[1,3]    -3.816004e-05 1.521744e-04 4.194657e-04     7   1.304074
+mu[1,4]    -5.434062e-05 1.557888e-04 7.668403e-04   104   1.072826
+mu[1,5]     9.274718e-01 1.098230e+00 1.410611e+00     2 263.192145
+sigma[1,1]  9.269415e-07 1.035023e-06 1.473883e-06     3   2.422412
+sigma[1,2]  1.071938e-03 1.724041e-03 2.577212e-03     2   6.670466
+sigma[1,3]  1.460003e-03 2.702810e-03 3.780986e-03     2   8.011095
+sigma[1,4]  9.655798e-04 2.751715e-03 1.008314e-02     2   4.746467
+sigma[1,5]  2.374310e-01 3.944822e-01 7.491349e-01     2 828.266855
+
+Samples were drawn using NUTS(diag_e) at Tue Jun 18 19:44:58 2019.
+For each parameter, n_eff is a crude measure of effective sample size,
+and Rhat is the potential scale reduction factor on split chains (at 
+convergence, Rhat=1).
+#+end_example
+
+Compared to the previous results:
+
+#+RESULTS:
+#+begin_example
+mu[2,1]    6.455300e-11
+mu[2,2]    3.614600e-11
+mu[2,3]    1.854931e-09
+mu[2,4]    3.292596e-09
+mu[2,5]    7.490877e-07
+sigma[2,1] 1.472000e-12
+sigma[2,2] 1.378400e-11
+sigma[2,3] 2.881900e-11
+sigma[2,4] 3.378400e-11
+sigma[2,5] 7.394641e-07
+#+end_example
+
+#+begin_src R :results output graphics :file ./images/trace_mh2_nh2_no_prior.png :exports both :width 600 :height 400 :session *R* 
+stan_trace(fit, pars=c("mu","sigma"))
+#+end_src
+
+#+RESULTS:
+[[file:./images/trace_mh2_nh2_no_prior.png]]
+
+Unfortunately the chains don't exactly converge without any init
+values, so we'll try if that can make the results more accurate.
+
+#+begin_src R :results output :session *R* :exports both
+dt = list(N=500,hosts=1,m=m,n=n,k=k,duration=duration)
+initfunction=function(){
+  list(mu=matrix(rep(1e-05,5),nrow=1),sigma=matrix(rep(1e-05,5),nrow=1))
+}
+fit = sampling(sm,data=dt, iter=1000, chains=4,init=initfunction,control=list(adapt_delta=0.99))
+#+end_src
+
+#+RESULTS:
+#+begin_example
+Warning messages:
+1: There were 1991 transitions after warmup that exceeded the maximum treedepth. Increase max_treedepth above 10. See
+http://mc-stan.org/misc/warnings.html#maximum-treedepth-exceeded 
+2: Examine the pairs() plot to diagnose sampling problems
+#+end_example
+
+#+begin_src R :results output :session *R* :exports both
+print(fit, digits=15, pars=c("mu","sigma"))
+#+end_src
+
+#+RESULTS:
+#+begin_example
+Inference for Stan model: 433f95818533823f5cce00385630df99.
+4 chains, each with iter=1000; warmup=500; thin=1; 
+post-warmup draws per chain=500, total post-warmup draws=2000.
+
+                    mean      se_mean           sd          2.5%           25%
+mu[1,1]     1.188843e-07 8.676688e-08 4.938865e-07 -8.809108e-07 -2.107147e-07
+mu[1,2]    -5.822130e-05 5.151332e-05 2.094022e-04 -4.665474e-04 -2.004139e-04
+mu[1,3]    -2.205518e-05 1.615989e-05 1.645802e-04 -3.623919e-04 -1.280669e-04
+mu[1,4]    -3.985519e-05 2.535879e-05 2.160626e-04 -4.615925e-04 -1.863240e-04
+mu[1,5]     1.957845e-03 1.670521e-03 2.687362e-03 -3.754333e-03  2.329270e-04
+sigma[1,1]  9.987388e-06 2.237630e-08 3.597388e-08  9.932919e-06  9.950687e-06
+sigma[1,2]  9.999936e-06 2.093078e-08 3.043652e-08  9.966822e-06  9.975573e-06
+sigma[1,3]  1.002108e-05 1.175594e-08 1.840687e-08  9.986043e-06  1.000499e-05
+sigma[1,4]  9.999032e-06 2.088701e-08 3.091836e-08  9.944668e-06  9.973119e-06
+sigma[1,5]  1.001018e-05 2.477130e-08 3.832682e-08  9.950060e-06  9.977086e-06
+                     50%          75%        97.5% n_eff     Rhat
+mu[1,1]     1.362906e-07 4.575880e-07 1.063984e-06    32 1.073547
+mu[1,2]    -6.340852e-05 8.243584e-05 3.596918e-04    17 1.116955
+mu[1,3]    -1.304166e-05 8.391995e-05 3.039263e-04   104 1.043031
+mu[1,4]    -4.126641e-05 1.081137e-04 3.614721e-04    73 1.049297
+mu[1,5]     2.725402e-03 4.278375e-03 5.473138e-03     3 3.467505
+sigma[1,1]  9.992439e-06 1.001580e-05 1.004430e-05     3 4.984484
+sigma[1,2]  9.988312e-06 1.002030e-05 1.005799e-05     2 4.649211
+sigma[1,3]  1.002664e-05 1.003636e-05 1.004848e-05     2 3.140276
+sigma[1,4]  9.998716e-06 1.003126e-05 1.004021e-05     2 5.455990
+sigma[1,5]  9.998945e-06 1.005333e-05 1.006421e-05     2 4.108195
+
+Samples were drawn using NUTS(diag_e) at Tue Jun 18 21:46:50 2019.
+For each parameter, n_eff is a crude measure of effective sample size,
+and Rhat is the potential scale reduction factor on split chains (at 
+convergence, Rhat=1).
+#+end_example
+
+Compared to the previous results:
+
+#+RESULTS:
+#+begin_example
+mu[2,1]    6.455300e-11
+mu[2,2]    3.614600e-11
+mu[2,3]    1.854931e-09
+mu[2,4]    3.292596e-09
+mu[2,5]    7.490877e-07
+sigma[2,1] 1.472000e-12
+sigma[2,2] 1.378400e-11
+sigma[2,3] 2.881900e-11
+sigma[2,4] 3.378400e-11
+sigma[2,5] 7.394641e-07
+#+end_example
+
+#+begin_src R :results output graphics :file ./images/trace_mh2_nh2_no_prior_init_values.png :exports both :width 600 :height 400 :session *R* 
+stan_trace(fit, pars=c("mu","sigma"))
+#+end_src
+
+#+RESULTS:
+[[file:./images/trace_mh2_nh2_no_prior_init_values.png]]
+
+****** TODO With a less informative prior
+****** With a precise prior
+We won't try again with falsely informative priors as we've seen the
+result: it's extremely unlikely to work; instead we'll test with
+a rather precise prior.
 
 #+begin_src R :results output :session *R* :exports both
 dt = list(N=500,hosts=1,m=m,n=n,k=k,duration=duration,mu_mean=c(1e-10,1e-10,1e-10,1e-10,1e-05),mu_sd=c(1e-11,1e-11,1e-11,1e-11,1e-06),sigma_mean=c(1e-10,1e-10,1e-10,1e-10,1e-05),sigma_sd=c(1e-11,1e-11,1e-11,1e-11,1e-06))
@@ -6988,9 +7131,6 @@ stan_trace(fit, pars=c("mu","sigma"))
 
 #+RESULTS:
 [[file:./images/trace_mh2_nh2_chosen_prior.png]]
-
-****** TODO Without prior
-****** TODO With a less informative prior
 *** 2019-06-17 monday
 **** Attended Thanos Andreou's thesis on Auditing, Measuring, and Bringing Transparency to Social Media Advertising Ecosystems
 **** REWORK <<Hierarchical model with independant parameters>>
@@ -7117,8 +7257,6 @@ model {
 sm = stan_model(model_code = modelString)
 #+end_src
 
-#+RESULTS:
-
 The non centered parameterisation makes it a little complicated to
 read, but we essentially have:
 
@@ -7157,25 +7295,25 @@ Inference for Stan model: b2667955b9325a911dc2bc1f399a61ae.
 post-warmup draws per chain=200, total post-warmup draws=600.
 
                     mean      se_mean           sd         2.5%          25%
-mu_alpha    7.002200e-11 2.300000e-14 6.200000e-13 6.881600e-11 6.958300e-11
-mu_beta     4.955480e-06 2.357207e-08 6.666410e-07 3.643649e-06 4.542632e-06
-mu_teta     1.000030e-10 0.000000e+00 3.000000e-15 1.000000e-10 1.000010e-10
-mu_gamma    1.009315e-05 2.857858e-09 9.182736e-08 1.000296e-05 1.002711e-05
-sigma_alpha 1.079000e-12 5.400000e-14 7.920000e-13 2.400000e-14 4.260000e-13
-sigma_beta  9.903481e-07 3.095171e-08 7.812637e-07 4.444671e-08 3.936288e-07
+mu_alpha    7.002400e-11 2.100000e-14 5.880000e-13 6.897200e-11 6.959800e-11
+mu_beta     5.824635e-06 2.529109e-08 8.139336e-07 4.336886e-06 5.227618e-06
+mu_teta     1.000030e-10 0.000000e+00 4.000000e-15 1.000000e-10 1.000010e-10
+mu_gamma    1.012941e-05 4.135314e-09 1.191117e-07 1.000319e-05 1.003912e-05
+sigma_alpha 9.930000e-13 3.700000e-14 7.100000e-13 3.400000e-14 4.270000e-13
+sigma_beta  1.419913e-06 6.040712e-08 1.033809e-06 5.800855e-08 6.140473e-07
 sigma_teta  4.000000e-15 0.000000e+00 4.000000e-15 0.000000e+00 1.000000e-15
-sigma_gamma 1.181155e-07 4.009874e-09 1.330543e-07 3.502910e-09 2.855143e-08
+sigma_gamma 1.892875e-07 6.929783e-09 1.962028e-07 3.119656e-09 4.808104e-08
                      50%          75%        97.5% n_eff      Rhat
-mu_alpha    6.999300e-11 7.045500e-11 7.119700e-11   750 0.9968888
-mu_beta     4.954161e-06 5.413054e-06 6.236904e-06   800 0.9980150
-mu_teta     1.000020e-10 1.000040e-10 1.000100e-10  1273 0.9968033
-mu_gamma    1.006620e-05 1.012748e-05 1.035001e-05  1032 1.0012824
-sigma_alpha 9.450000e-13 1.594000e-12 2.913000e-12   217 0.9990420
-sigma_beta  8.019817e-07 1.437840e-06 2.918170e-06   637 1.0000415
-sigma_teta  3.000000e-15 6.000000e-15 1.600000e-14   831 0.9976975
-sigma_gamma 7.435250e-08 1.634610e-07 5.059164e-07  1101 0.9968615
+mu_alpha    7.001100e-11 7.045300e-11 7.113000e-11   774 0.9992719
+mu_beta     5.819040e-06 6.388126e-06 7.494381e-06  1036 1.0001999
+mu_teta     1.000020e-10 1.000040e-10 1.000120e-10   666 1.0033014
+mu_gamma    1.009783e-05 1.018722e-05 1.045881e-05   830 0.9972468
+sigma_alpha 8.950000e-13 1.436000e-12 2.673000e-12   365 0.9994191
+sigma_beta  1.246015e-06 2.012980e-06 3.852476e-06   293 1.0126920
+sigma_teta  3.000000e-15 6.000000e-15 1.500000e-14  1235 0.9979455
+sigma_gamma 1.307662e-07 2.732682e-07 7.129930e-07   802 0.9979982
 
-Samples were drawn using NUTS(diag_e) at Tue Jun 18 17:07:24 2019.
+Samples were drawn using NUTS(diag_e) at Wed Jun 19 09:54:40 2019.
 For each parameter, n_eff is a crude measure of effective sample size,
 and Rhat is the potential scale reduction factor on split chains (at 
 convergence, Rhat=1).
@@ -7186,7 +7324,7 @@ stan_trace(fit,pars=c("mu_alpha","mu_beta","mu_teta","mu_gamma","sigma_alpha","s
 #+end_src
 
 #+RESULTS:
-[[file:/tmp/babel-13758dV0/figure13758PfD.png]]
+[[file:./images/trace_hierarchical_mh1_nh2_model.png]]
 
 *** 2019-06-18 tuesday
 **** Tried to make slides using org-mode
@@ -7194,3 +7332,7 @@ Following the example of Arnaud's slides for the bootcamp talks, we
 tried to make a few slides of our own but we had issues with latex
 compilation despite installing a lot of dependencies.
 
+*** 2019-06-19 wednesday
+**** Worked on the slides for friday
+With the help of Tom who debugged our LateX issues, we tried our hand
+again at making slides with org-mode, using Arnaud's model.
